--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -83,7 +83,12 @@
 	
 	<div class="dialog" id="dialog" style="display:none"> 
 		<div class="dialogbg">
-					
+			<div>그룹이름</div>
+			
+			<div>
+				<button class="makeBtn">만들기</button>
+				<button class="cancelBtn">취소</button>
+			</div>
 		</div>
 	</div>
 </body>
