--- a/ManiMani/src/main/resources/static/css/matching.css
+++ b/ManiMani/src/main/resources/static/css/matching.css
@@ -24,6 +24,31 @@
 	right: 5px;
 }
 /**********************/
+/*****  button *****/
+.mbtn{
+	display:none;
+	font-size:20px;
+	margin: 0px auto;
+	border: 1px solid black;
+	border-radius: 20px;
+	width: 70px;
+	height: 36px;
+	padding: 1px;
+	
+	background-color: #fd9c87;
+	color:white;
+}
+/*******************/
+/******  maniInfo 이미지크기  ******/
+.Q{
+	width: 250px;
+    height: 250px;
+    margin: 0px auto;
+    width: 300px;
+    height: 300px;
+    margin-left: 18%;
+    margin-top: 40px;	
+}
 
 /****  slide  *****/
 
