group.css & group/main.html 추가 (CSS수정)

--- a/ManiMani/src/main/resources/static/css/group.css
+++ b/ManiMani/src/main/resources/static/css/group.css
@@ -144,4 +144,12 @@ body{
 }
 .dialogTitle{
 	margin-top:20px;
+	padding-left:10px;
+}
+.dialogContent{
+	padding-left:10px;
+}
+#dt{
+	width:200px;
+	text-align:center;
 }
