--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -85,18 +85,24 @@
 		<div class="dialogbg">
 		 <form method="post">
 			<div class="dialogTitle">그룹이름</div>
-				<input type=text>
+				<div class="dialogContent"><input type=text></div>
+				
 			<div class="dialogTitle">그룹설명</div>
-				<input type=text>
+				<div class="dialogContent"><textarea rows="10" cols="58" name=content></textarea></div>
+				
 			<div class="dialogTitle">그룹인원</div>
-				<input type="number">
+				<div class="dialogContent"><input type="number"></div>
+				
 			<div class="dialogTitle">기간</div>
-				<input type="text" id="dt" name="dt" maxlength="10" th:value="${#calendars.format(#calendars.createNow(), 'yyyy-MM-dd HH:mm')}" readonly>
+				<div class="dialogContent">
+				<input type="text" id="dt" name="dt" th:value="${#calendars.format(#calendars.createNow(), 'yyyy-MM-dd HH:mm')}" readonly>
 				~
 							<!-- 날짜만 할거면
 							<input type="date">
 							-->
-				<input type="datetime-local">	<!-- 시작시간보다 앞일 경우 알림 표시 -->
+				<input type="datetime-local" id="dt">	<!-- 시작시간보다 앞일 경우 알림 표시 -->
+				</div>
+				
 			<div class="dialogTitle">
 				<button class="makeBtn">생성하기</button>
 				<button class="cancelBtn">취소</button>
