group.css & group/main.html 추가 (CSS수정)

--- a/ManiMani/src/main/resources/static/css/group.css
+++ b/ManiMani/src/main/resources/static/css/group.css
@@ -149,6 +149,11 @@ body{
 .dialogContent{
 	padding-left:10px;
 }
+.dialogPerson{
+	padding-left:10px;
+	width: 80px;
+    text-align: center;
+}
 #dt{
 	width:200px;
 	text-align:center;
