--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -91,7 +91,7 @@
 				<div class="dialogContent"><textarea rows="10" cols="58" name=content></textarea></div>
 				
 			<div class="dialogTitle">그룹인원</div>
-				<div class="dialogContent"><input type="number"></div>
+				<div class="dialogPerson"><input type="number"></div>
 				
 			<div class="dialogTitle">기간</div>
 				<div class="dialogContent">
