group.css text타입 수정

--- a/ManiMani/src/main/resources/static/css/group.css
+++ b/ManiMani/src/main/resources/static/css/group.css
@@ -149,8 +149,7 @@ body{
 .dialogContent{
 	padding-left:10px;
 }
-.dialogPerson{
-	padding-left:10px;
+#person{
 	width: 80px;
     text-align: center;
 }
