--- a/ManiMani/src/main/resources/static/css/group.css
+++ b/ManiMani/src/main/resources/static/css/group.css
@@ -124,6 +124,23 @@ body{
 
 /***********************************************************/
 /* 그룹만드는 모달창 CSS */
+.dialogSubject{
+	position:relative;
+	top:30px;
+	width:350px;
+	height:65px;
+	left:22%;
+	border-radius: 40px;
+	border: 1.5px solid #494949;
+	background-color: #fd9c87;
+	color:#bfe261;
+	font-size:30px;
+	text-align:center;
+	padding-top:5px;
+	font-weight:bold;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: black;
+}
 .makeBtn{
 	position:relative;
 	width:100px;
@@ -131,7 +148,8 @@ body{
 	left:30%;
 	border-radius: 20px;
 	border: 1.5px solid #494949;
-	background-color: #7cdda6;
+	background-color: #fd9c87;
+	color:white;
 }
 .cancelBtn{
 	position:relative;
@@ -140,20 +158,45 @@ body{
 	left:35%;
 	border-radius: 20px;
 	border: 1.5px solid #494949;
-	background-color: #dcedbc;
+	background-color: #93b8ef;
+	color:white;
+}
+.dialogTitle1{
+	margin-top:10%;
+	padding-left:30px;
+	font-size:20px;
+	font-weight:bold;
 }
 .dialogTitle{
 	margin-top:20px;
-	padding-left:10px;
+	padding-left:30px;
+	font-size:20px;
+	font-weight:bold;
 }
 .dialogContent{
-	padding-left:10px;
+	padding-left:30px;
+}
+.Gname{
+	display:inline-block;
+	padding-top:30px;
+}
+.Gnum{
+	display:inline-block;
 }
 #person{
 	width: 80px;
+	height:35px;
     text-align: center;
 }
 #dt{
 	width:200px;
 	text-align:center;
+}
+#cont1{
+	height:35px;
+	padding-left:10px;
+}
+#cont2{
+	padding-left:10px;
+	padding-top:15px;
 }
